# asr-ja_evalkit

./: README.md  gentbl.sh  pyproject.toml  pyscliteja.py  setup.sh  setup_for_tool.sh
cpjd/: filter.py  run_all.sh  setup.sh
csj/: run_all.sh
csj/rule/: regex_eval1_lv-lax.txt  regex_eval2_lv-lax.txt  regex_eval3_lv-lax.txt
fleurs/: dl.py  run_all.sh  setup.sh
fleurs/rule/: regex_lv-lax.txt
jsut/: run_all.sh  setup.sh
jsut/rule/: regex_basic5000_lv-lax.txt
jvnv/: run_all.sh  setup.sh  trans2text.py
jvnv/rule/: regex_anger_lv-lax.txt  regex_disgust_lv-lax.txt  regex_fear_lv-lax.txt  regex_happy_lv-lax.txt  (+1 more)
pysctkja/: __init__.py  app.py  charnorm.py  espnet_batch.py  espnet_stream.py  espnet_stream_detrep.py  funasr_batch.py  funasrnano_batch.py  kotobawhisper_batch.py  nue.py  numnorm.py  qwenasr_batch.py  reazon.py  rulenorm.py  sasrct_batch.py  sasrct_bb_batch.py  skip.py  summarize.py  trnformatter.py  whisperv3.py  wordnorm.py
sample/: egs_hyplist.txt  egs_reflist.txt
scripts/: audiodur.sh  run_espnet.sh  run_espnet_stream.sh  run_espnet_stream_detrep.sh  run_funasr.sh  run_funasrnano.sh  run_kotobaw.sh  run_kushinada.sh  run_nue.sh  run_qwenasr.sh  run_reazon.sh  run_sasrct.sh  run_sasrct_bb.sh  run_whisperv3.sh  scores.sh  scores.sh.back  sumcer_tag.txt
spreds-d1/: removetag.py  run_all.sh  setup.sh
spreds-d2/: embedpath.py  removetag.py  run_all.sh  setup.sh  wavsplit.py
spreds-p1/: label2pair.py  run_all.sh  setup.sh
spreds-u1/: label2pair.py  run_all.sh  setup.sh
spreds-u1-revbgn/: run_all.sh  setup.sh  synthesize.py
(+31 files in other folders)
